# SimpleRenderEngineProject

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
cmake/: FindBullet.cmake  FindGLEW.cmake  FindSDL2_IMAGE.cmake  FindSDL2_mixer.cmake  Findassimp.cmake
examples/: CMakeLists.txt  hello-engine.cpp  obj-viewer.cpp  render-to-texture.cpp  spinning-primitives-tex.cpp
examples_data/: MarioPacked.json
project/: CMakeLists.txt  assimp.cpp  box2d-example.cpp  box2d-platform-example.cpp  bullet-example.cpp  lua-example-lines.cpp  lua-example.cpp  node-editor.cpp  project.cpp  scene-graph.cpp  sdl2_mixer-example.cpp
project/3D_Scenegraph/: BulletDebugDrawSRE.cpp  BulletDebugDrawSRE.hpp  BulletPhysics.cpp  BulletPhysics.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CollisionHandler.hpp  Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Light.cpp  Light.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Ray.hpp  Renderable.hpp  RigidBody.cpp  RigidBody.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp  Updatable.hpp  main.cpp
project/Box2DTestbed/: CMakeLists.txt
project/Box2DTestbed/Framework/: DebugDraw.cpp  DebugDraw.h  Main.cpp  Test.h
project/Box2DTestbed/Tests/: ApplyForce.h  BodyTypes.h  Car.h  Confined.h  ConvexHull.h  DistanceTest.h  DynamicTreeTest.h  EdgeShapes.h  FooTest.cpp  FooTest.h  HeavyOnLightTwo.h  MotorJoint.h  Pinball.h  PolyCollision.h  PolyShapes.h  Prismatic.h  RayCast.h  Revolute.h  RopeJoint.h  ShapeEditing.h  SliderCrank.h  TestEntries.cpp  TheoJansen.h  VerticalStack.h  Web.h
project/BussIK/: BussIKMain.cpp  CMakeLists.txt
project/gui/: CMakeLists.txt  CameraComponent.cpp  CameraComponent.hpp  Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Hero.cpp  Hero.hpp  MainMenuComponent.cpp  MainMenuComponent.h  RPG.cpp  RPG.h  Scene.cpp  Scene.h  SpriteComponent.cpp  SpriteComponent.hpp
project/gui/assets/: license.txt
project/particle_system/: CMakeLists.txt  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  main.cpp
project/particle_system/particle-pack-01/: licence.txt
project/platformer/: BirdMovementComponent.cpp  BirdMovementComponent.hpp  Box2DDebugDraw.cpp  Box2DDebugDraw.hpp  CMakeLists.txt  CharacterController.cpp  CharacterController.hpp  Component.cpp  Component.hpp  GameObject.hpp  Level.cpp  Level.hpp  MovingPlatformComponent.cpp  MovingPlatformComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlatformComponent.cpp  PlatformComponent.hpp  PlatformerGame.cpp  PlatformerGame.hpp  SideScrollingCamera.cpp  SideScrollingCamera.hpp  license.txt  main.cpp  platformer-art-deluxe.json
src/embedded_deps/: standard_blinn_phong_frag.glsl
src/sre/: Mesh.cpp  ModelImporter.cpp  SDLRenderer.cpp
