# Add executables (to different projects)
add_executable(SRE-Spinning-Cube spinning-cube.cpp)
add_executable(SRE-Spinning-Primitives-Tex spinning-primitives-tex.cpp)
add_executable(SRE-Hello-Engine hello-engine.cpp)
add_executable(SRE-GUI gui.cpp)
add_executable(SRE-Spheres spheres.cpp)
add_executable(SRE-Benchmark64k benchmark64k.cpp)
add_executable(SRE-Picking picking.cpp)
add_executable(SRE-RenderToTexture render-to-texture.cpp)
add_executable(SRE-ObjViewer obj-viewer.cpp)
add_executable(SRE-Hello-Engine-Raw hello-engine-raw.cpp)
add_executable(SRE-Sprite sprite-example.cpp)

# Link projects with project libraries
target_link_libraries(SRE-Spinning-Cube ${all_libs})
target_link_libraries(SRE-Spinning-Primitives-Tex ${all_libs})
target_link_libraries(SRE-Hello-Engine ${all_libs})
target_link_libraries(SRE-GUI ${all_libs})
target_link_libraries(SRE-Spheres ${all_libs})
target_link_libraries(SRE-Benchmark64k ${all_libs})
target_link_libraries(SRE-Picking ${all_libs})
target_link_libraries(SRE-RenderToTexture ${all_libs})
target_link_libraries(SRE-ObjViewer ${all_libs})
target_link_libraries(SRE-Hello-Engine-Raw ${all_libs})
target_link_libraries(SRE-Sprite ${all_libs})

message(${CMAKE_CURRENT_BINARY_DIR})
file(COPY ../examples_data DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
file(COPY ../examples_data DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)

IF (WIN32)	
## Copy dll's to output path
    file(COPY ${DLLFileList} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
    file(COPY ${DLLFileList} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)

    # Set working folder to project folder (to find project data runtime)
	set_target_properties("SRE-Spinning-Cube" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-Spinning-Primitives-Tex" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-Hello-Engine" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-GUI" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-Spheres" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-Benchmark64k" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-Picking" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-RenderToTexture" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-ObjViewer" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-Hello-Engine-Raw" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set_target_properties("SRE-Sprite" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
ENDIF(WIN32)
